[package]
name = "content-addressable"
version = "0.0.1"
edition = "2021"
authors = ["Dave Grantham <dwg@linuxprogrammer.org>"]
description = "Content addressable storage traits and implementations"
repository = "https://github.com/cryptidtech/content-addressable.git"
readme = "README.md"
license = "Apache-2.0"

[features]
default = ["serde"]
dag_cbor = ["serde_cbor", "serde_cbor/tags", "multicid/dag_cbor" ]

[dependencies]
log = "0.4.21"
multibase = "0.9"
multicid = { version = "1.0", git = "https://github.com/cryptidtech/multicid.git" }
multicodec = { version = "1.0", git = "https://github.com/cryptidtech/rust-multicodec.git" }
multihash = { versin = "1.0", git = "https://github.com/cryptidtech/multihash.git" }
multitrait = { version = "1.0", git = "https://github.com/cryptidtech/multitrait.git" }
multiutil = { version = "1.0", git = "https://github.com/cryptidtech/multiutil.git" }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"], optional = true }
serde_cbor = { version = "0.11", optional = true }
thiserror = "1.0.60"

[dev-dependencies]
hex = "0.4"
serde_cbor = "0.11"
serde_json = "1.0"
serde_test = "1.0"
